Add Quiz into the Potential Risks section

--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DarkWeb</title>
-    <link rel="stylesheet" href="src/style/fonts.css" />
-    <link rel="stylesheet" href="src/style/style.css" />
-    <link rel="stylesheet" href="src/style/onion-nodes.css" />
-    <link rel="stylesheet" href="src/style/store-buttons.css" />
+    <link rel="stylesheet" href="src/styles/fonts.css" />
+    <link rel="stylesheet" href="src/styles/style.css" />
+    <link rel="stylesheet" href="src/styles/onion-nodes.css" />
+    <link rel="stylesheet" href="src/styles/store-buttons.css" />
+    <link rel="stylesheet" href="src/styles/quiz.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="./src/scripts/onion-nodes.js"></script>
+    <script defer src="./src/scripts/quiz.js"></script>
   </head>
-  <body>
+  <body onload="NextQuestion(0)">
     <main class="max-w-5xl flex flex-col gap-10 mx-auto w-full pt-6 px-6 pb-16">
-      <h1 class="website-title text-[4rem] md:text-[10rem] text-center text-white">DarkWeb</h1>
+      <h1
+        class="website-title text-[4rem] md:text-[10rem] text-center text-white"
+      >
+        DarkWeb
+      </h1>
       <section>
         <div class="flex flex-col gap-4 text-white font-semibold">
           <p>
@@ -109,6 +115,102 @@
           <li>Some websites may not be Tor-compatible.</li>
           <li>Risk of accidental personal information leakage.</li>
         </ul>
+        <div class="game-quiz-container">
+          <!-- creating a modal for when quiz ends -->
+          <div class="modal-container" id="score-modal">
+            <div class="modal-content-container">
+              <h1>Congratulations, Quiz Completed.</h1>
+              <div class="grade-details">
+                <p>Attempts : 10</p>
+                <p>Wrong Answers : <span id="wrong-answers"></span></p>
+                <p>Right Answers : <span id="right-answers"></span></p>
+                <p>Grade : <span id="grade-percentage"></span>%</p>
+                <p><span id="remarks"></span></p>
+              </div>
+              <div class="modal-button-container">
+                <button onclick="closeScoreModal()">Continue</button>
+              </div>
+            </div>
+          </div>
+          <!-- end of modal of quiz details-->
+          <div class="game-details-container">
+            <h1>Score : <span id="player-score"></span> / 10</h1>
+            <h1>Question : <span id="question-number"></span> / 10</h1>
+          </div>
+          <div class="game-question-container">
+            <h1 id="display-question"></h1>
+          </div>
+          <div class="game-options-container">
+            <div class="modal-container" id="option-modal">
+              <div class="modal-content-container">
+                <h1>Please Pick An Option</h1>
+
+                <div class="modal-button-container">
+                  <button onclick="closeOptionModal()">Continue</button>
+                </div>
+              </div>
+            </div>
+            <span>
+              <input
+                type="radio"
+                id="option-one"
+                name="option"
+                class="radio"
+                value="optionA"
+              />
+              <label
+                for="option-one"
+                class="option"
+                id="option-one-label"
+              ></label>
+            </span>
+            <span>
+              <input
+                type="radio"
+                id="option-two"
+                name="option"
+                class="radio"
+                value="optionB"
+              />
+              <label
+                for="option-two"
+                class="option"
+                id="option-two-label"
+              ></label>
+            </span>
+            <span>
+              <input
+                type="radio"
+                id="option-three"
+                name="option"
+                class="radio"
+                value="optionC"
+              />
+              <label
+                for="option-three"
+                class="option"
+                id="option-three-label"
+              ></label>
+            </span>
+            <span>
+              <input
+                type="radio"
+                id="option-four"
+                name="option"
+                class="radio"
+                value="optionD"
+              />
+              <label
+                for="option-four"
+                class="option"
+                id="option-four-label"
+              ></label>
+            </span>
+          </div>
+          <div class="next-button-container">
+            <button onclick="handleNextQuestion()">Next Question</button>
+          </div>
+        </div>
       </section>
       <hr class="h-[0.05rem] bg-white w-full" />
       <section class="flex flex-col gap-4 text-white font-semibold">
@@ -140,16 +242,19 @@
         </p>
         <ul class="list-disc list-inside max-w-full break-all">
           <li>
-            Torch
-            (<span class="text-purple-300">http://xmh57jrknzkhv6y3ls3ubitzfqnkrwxhopf5aygthi7d6rplyvk3noyd.onion</span>)
+            Torch (<span class="text-purple-300"
+              >http://xmh57jrknzkhv6y3ls3ubitzfqnkrwxhopf5aygthi7d6rplyvk3noyd.onion</span
+            >)
           </li>
           <li>
-            Ahmia
-            (<span class="text-purple-300">http://juhanurmihxlp77nkq76byazcldy2hlmovfu2epvl5ankdibsot4csyd.onion</span>)
+            Ahmia (<span class="text-purple-300"
+              >http://juhanurmihxlp77nkq76byazcldy2hlmovfu2epvl5ankdibsot4csyd.onion</span
+            >)
           </li>
           <li>
-            Haystack
-            (<span class="text-purple-300">http://haystak5njsmn2hqkewecpaxetahtwhsbsa64jom2k22z5afxhnpxfid.onion</span>)
+            Haystack (<span class="text-purple-300"
+              >http://haystak5njsmn2hqkewecpaxetahtwhsbsa64jom2k22z5afxhnpxfid.onion</span
+            >)
           </li>
         </ul>
       </section>
